--- a/config/database.yml
+++ b/config/database.yml
@@ -20,16 +20,20 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  username: antonio
+  password: parola
+  
 
 development:
   <<: *default
-  database: template1
+  database: toni_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: elsyser
+  #username: toni
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +61,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: antonio_test
+  database: toni_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +84,6 @@ test:
 #
 production:
   <<: *default
-  database: antonio_production
-  username: antonio
-  password: <%= ENV['ANTONIO_DATABASE_PASSWORD'] %>
+  database: toni_production
+  username: toni
+  password: <%= ENV['TONI_DATABASE_PASSWORD'] %>
